# Lamp

./: .gitignore  CMakeLists.txt  README.md  config.h.in  makefile  serial
Lamp-PRi/: CMakeLists.txt
Lamp-PRi/src/: CMakeLists.txt  common.c  main.c  notification.c  serial.h
Lamp-REST/: CMakeLists.txt  config.h.in
Lamp-REST/src/: CMakeLists.txt  event.c  event.h  kaa.c  kaa.h  main.c  response.c  response.h  route.c  route.h  server.c  server.h  user.c  user.h
Lamp-RPi/: CMakeLists.txt  config.h.in
Lamp-RPi/src/: CMakeLists.txt  common.h  event.c  event.h  lamp.c  lamp.h  log.c  log.h  main.c  notification.c  notification.h  profile.c  profile.h  serial.c  serial.h
Lamp-Serial/lamp_serial/: CAnADem.py  __init__.py  main.py
Lamp-Serial/lamp_serial/domain/: __init__.py  light.py
Lamp-Serial/lamp_serial/sys/: lserial.py  serial.py
content/: API.md
doc/: API.md  Gantt-Chart.vsdx  architecture.docx  architecture.vsdx
libs/src/kaa/: kaa_defaults.h
reports/: .gitignore  Meeting-04-11-2016.docx  Meeting-04-25-2016.docx
reports/WEEK3-Esfand/: Makefile  thursday_report.tex
reports/WEEK4-Esfand/: Makefile  tuesday_report.tex
reports/WEEK4-Farvardin/: .~lock.sunday_report.docx#  sunday_report.docx
schema/: ir.ac.aut.ceit.aolab.lamp.location_info_schema.v1.avsc  lamp-event-schema-v1.avsc  lamp-event-schema-v2.avsc  lamp-event-schema-v3.avsc  lamp-notification-schema-v2.avsc  lamp-notification-schema.avsc
src/: CMakeLists.txt  common.c  common.h  data.c  data.h  lamp.c  lamp.h  log.c  log.h  main.c  notification.c  notification.h  profile.c  profile.h  serial.c  user.c  user.h  util.h
